2007-03-17  Inge Wallin  <inge@lysator.liu.se>
	
	Remove some warnings for qgridlayout, and port to qgroupbox
	* dialogs/KCWizardCharttype.cc (constructor): Fix call to QGridLayout
	* dialogs/KCConfigLegendPage.cc (constructor): Fix part of the
	layout handling
	
	Remove some warnings for qwidget:
	* kchart_view.cc (KChartView): Don't call setBackgroundMode()
	* dialogs/KCConfigBackgroundPage.cc (init): Warn about background
	images not working.
	
	Remove warnings for qpixmap:
	* kchart_part.cc
	* dialogs/KCConfigBackgroundPage.cc
	Replace deprecated calls.
	
	Remove warnings for qcombobox, qstringlist:
	* dialogs/KCConfigBackgroundPage.cc
	Replace deprecated calls.
	
	Remove warnings for qfont, qabstractbutton, qobject:
	* kchart_params.cc
	* dialogs/KCWizardCharttype.cc
	* dialogs/KCConfigLegendPage.cc
	* kchartDataEditor.cc
	Replace deprecated calls.
	
	Remove warnings for spinboxes:
	* dialogs/KCConfigAxesPage.cc
	* dialogs/KCConfigSubtypePiePage.cc
	* dialogs/KCConfigSubtypePolarPage.cc
	* dialogs/KCWizardAxesPage.cc
	* dialogs/KCConfigBackgroundPage.cc
	* kchartDataEditor.cc
	Replace deprecated calls, mostly to constructors.
	
	Remove warnings for layouts
	* dialogs/KCConfigAxesPage.cc
	* dialogs/KCConfigFontPage.cc
	* dialogs/KCConfigDataPage.cc
	* dialogs/KCWizardSubtypePage.cc
	* dialogs/KCConfigSubtypePiePage.cc
	* dialogs/KCConfigSubtypePage.cc
	* dialogs/KCWizardAxesPage.cc
	* dialogs/KCConfigLegendPage.cc
	* dialogs/KCConfigDialog.cc
	* dialogs/KCConfigSubtypeLinePage.cc
	* dialogs/KCWizardDataPage.cc
	* dialogs/KCWizardLabelsLegendPage.cc
	* dialogs/KCConfigColorPage.cc
	* dialogs/KCConfigBackgroundPage.cc
	* dialogs/KCConfigSubtypeBarPage.cc
	* dialogs/KCPageLayout.cc
	Replace deprecated calls, mostly to constructors.
	* kchartDataEditor.cc: Don't compare signed and unsigned ints
	
	Qt3 -> Qt4 changes
	* dialogs/KCWizardAxesPage.h
	* dialogs/KCWizardCharttype.cc
	* dialogs/KCConfigDataPage.cc
	* dialogs/KCPrinterDialog.cc